// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ProposalPageFusionInformations /> should render a list of proposal merged from other proposal 1`] = `
<Fragment>
  <ProposalPageFusionInformations__ProposalPageFusionInformationsContainer>
    <div>
      <span>
        <Icon
          color="#1A88FF"
          name="information"
          size={12}
        />
        <FormattedMessage
          id="proposal.fusionned"
          values={Object {}}
        />
      </span>
      <div>
        <FormattedMessage
          id="proposal.fusionnedInto"
          values={Object {}}
        />
        <div
          key="proposal2"
        >
          <a
            href="https://capco.dev/proposals/2"
          >
            Title Proposal 2
          </a>
        </div>
        <div
          key="proposal3"
        >
          <a
            href="https://capco.dev/proposals/3"
          >
            Title Proposal 3
          </a>
        </div>
      </div>
    </div>
  </ProposalPageFusionInformations__ProposalPageFusionInformationsContainer>
</Fragment>
`;

exports[`<ProposalPageFusionInformations /> should render a list of proposal of merged in other proposal 1`] = `
<Fragment>
  <ProposalPageFusionInformations__ProposalPageFusionInformationsContainer>
    <div>
      <span>
        <Icon
          color="#1A88FF"
          name="information"
          size={12}
        />
        <FormattedMessage
          id="proposals.fusionned"
          values={Object {}}
        />
      </span>
      <div>
        <FormattedMessage
          id="new.proposal.fusionnedFrom"
          values={
            Object {
              "num": 2,
            }
          }
        />
        <div
          key="proposal2"
        >
          - 
          <a
            href="https://capco.dev/proposals/2"
          >
            Title Proposal 2
          </a>
        </div>
        <div
          key="proposal3"
        >
          - 
          <a
            href="https://capco.dev/proposals/3"
          >
            Title Proposal 3
          </a>
        </div>
      </div>
    </div>
  </ProposalPageFusionInformations__ProposalPageFusionInformationsContainer>
</Fragment>
`;
